parser/cool.output
Terminais sem uso na gramática

    ERROR


Gramática

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS error '{' feature_list '}' ';'

    7 feature_list: features
    8             | %empty

    9 features: feature ';'
   10         | features feature ';'
   11         | error ';'

   12 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}'
   13        | OBJECTID '(' formal_list ')' ':' TYPEID '{' '}'
   14        | OBJECTID '(' ')' ':' TYPEID '{' '}'
   15        | OBJECTID '(' ')' ':' TYPEID '{' expr '}'
   16        | OBJECTID ':' TYPEID opt_assign

   17 formal_list: formal
   18            | formal_list ',' formal

   19 formal: OBJECTID ':' TYPEID

   20 expr_list: expr_list ',' expr
   21          | expr
   22          | error
   23          | %empty

   24 expr_block: expr_block expr ';'
   25           | expr ';'
   26           | error ';'

   27 opt_assign: ASSIGN expr
   28           | %empty

   29 case: OBJECTID ':' TYPEID DARROW expr ';'

   30 cases: case
   31      | cases case

   32 let_list: OBJECTID ':' TYPEID IN expr
   33         | OBJECTID ':' TYPEID ASSIGN expr IN expr
   34         | OBJECTID ':' TYPEID ',' let_list
   35         | OBJECTID ':' TYPEID ASSIGN expr ',' let_list
   36         | error IN expr
   37         | error ',' let_list

   38 expr: OBJECTID ASSIGN expr
   39     | expr '.' OBJECTID '(' expr_list ')'
   40     | OBJECTID '(' expr_list ')'
   41     | expr '@' TYPEID '.' OBJECTID '(' expr_list ')'
   42     | IF expr THEN expr ELSE expr FI
   43     | WHILE expr LOOP expr POOL
   44     | '{' expr_block '}'
   45     | NEW TYPEID
   46     | ISVOID expr
   47     | expr '+' expr
   48     | expr '-' expr
   49     | expr '/' expr
   50     | expr '*' expr
   51     | expr '<' expr
   52     | expr LE expr
   53     | expr '=' expr
   54     | '~' expr
   55     | NOT expr
   56     | LET let_list
   57     | CASE expr OF cases ESAC
   58     | '(' expr ')'
   59     | STR_CONST
   60     | INT_CONST
   61     | BOOL_CONST
   62     | OBJECTID


Terminais, com as regras onde eles aparecem

    $end (0) 0
    '(' (40) 12 13 14 15 39 40 41 58
    ')' (41) 12 13 14 15 39 40 41 58
    '*' (42) 50
    '+' (43) 47
    ',' (44) 18 20 34 35 37
    '-' (45) 48
    '.' (46) 39 41
    '/' (47) 49
    ':' (58) 12 13 14 15 16 19 29 32 33 34 35
    ';' (59) 4 5 6 9 10 11 24 25 26 29
    '<' (60) 51
    '=' (61) 53
    '@' (64) 41
    '{' (123) 4 5 6 12 13 14 15 44
    '}' (125) 4 5 6 12 13 14 15 44
    '~' (126) 54
    error (256) 6 11 22 26 36 37
    CLASS (258) 4 5 6
    ELSE (259) 42
    FI (260) 42
    IF (261) 42
    IN (262) 32 33 36
    INHERITS (263) 5
    LET (264) 56
    LOOP (265) 43
    POOL (266) 43
    THEN (267) 42
    WHILE (268) 43
    CASE (269) 57
    ESAC (270) 57
    OF (271) 57
    DARROW (272) 29
    NEW (273) 45
    ISVOID (274) 46
    STR_CONST <symbol> (275) 59
    INT_CONST <symbol> (276) 60
    BOOL_CONST <boolean> (277) 61
    TYPEID <symbol> (278) 4 5 12 13 14 15 16 19 29 32 33 34 35 41 45
    OBJECTID <symbol> (279) 12 13 14 15 16 19 29 32 33 34 35 38 39 40 41 62
    ASSIGN (280) 27 33 35 38
    NOT (281) 55
    LE (282) 52
    ERROR (283)


Não terminais com as regras onde eles aparecem

    $accept (45)
        à esquerda: 0
    program <program> (46)
        à esquerda: 1
        à direita: 0
    class_list <classes> (47)
        à esquerda: 2 3
        à direita: 1 3
    class <class_> (48)
        à esquerda: 4 5 6
        à direita: 2 3
    feature_list <features> (49)
        à esquerda: 7 8
        à direita: 4 5 6
    features <features> (50)
        à esquerda: 9 10 11
        à direita: 7 10
    feature <feature> (51)
        à esquerda: 12 13 14 15 16
        à direita: 9 10
    formal_list <formals> (52)
        à esquerda: 17 18
        à direita: 12 13 18
    formal <formal> (53)
        à esquerda: 19
        à direita: 17 18
    expr_list <expressions> (54)
        à esquerda: 20 21 22 23
        à direita: 20 39 40 41
    expr_block <expressions> (55)
        à esquerda: 24 25 26
        à direita: 24 44
    opt_assign <expression> (56)
        à esquerda: 27 28
        à direita: 16
    case <case_> (57)
        à esquerda: 29
        à direita: 30 31
    cases <cases> (58)
        à esquerda: 30 31
        à direita: 31 57
    let_list <expression> (59)
        à esquerda: 32 33 34 35 36 37
        à direita: 34 35 37 56
    expr <expression> (60)
        à esquerda: 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
        à direita: 12 15 20 21 24 25 27 29 32 33 35 36 38 39 41 42 43 46 47 48 49 50 51 52 53 54 55 57 58


Estado 0

    0 $accept: • program $end

    CLASS  deslocar, e ir ao estado 1

    program     ir ao estado 2
    class_list  ir ao estado 3
    class       ir ao estado 4


Estado 1

    4 class: CLASS • TYPEID '{' feature_list '}' ';'
    5      | CLASS • TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS • error '{' feature_list '}' ';'

    error   deslocar, e ir ao estado 5
    TYPEID  deslocar, e ir ao estado 6


Estado 2

    0 $accept: program • $end

    $end  deslocar, e ir ao estado 7


Estado 3

    1 program: class_list •
    3 class_list: class_list • class

    CLASS  deslocar, e ir ao estado 1

    $padrão  reduzir usando a regra 1 (program)

    class  ir ao estado 8


Estado 4

    2 class_list: class •

    $padrão  reduzir usando a regra 2 (class_list)


Estado 5

    6 class: CLASS error • '{' feature_list '}' ';'

    '{'  deslocar, e ir ao estado 9


Estado 6

    4 class: CLASS TYPEID • '{' feature_list '}' ';'
    5      | CLASS TYPEID • INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  deslocar, e ir ao estado 10
    '{'       deslocar, e ir ao estado 11


Estado 7

    0 $accept: program $end •

    $padrão  aceitar


Estado 8

    3 class_list: class_list class •

    $padrão  reduzir usando a regra 3 (class_list)


Estado 9

    6 class: CLASS error '{' • feature_list '}' ';'

    error     deslocar, e ir ao estado 12
    OBJECTID  deslocar, e ir ao estado 13

    '}'  reduzir usando a regra 8 (feature_list)

    feature_list  ir ao estado 14
    features      ir ao estado 15
    feature       ir ao estado 16


Estado 10

    5 class: CLASS TYPEID INHERITS • TYPEID '{' feature_list '}' ';'

    TYPEID  deslocar, e ir ao estado 17


Estado 11

    4 class: CLASS TYPEID '{' • feature_list '}' ';'

    error     deslocar, e ir ao estado 12
    OBJECTID  deslocar, e ir ao estado 13

    '}'  reduzir usando a regra 8 (feature_list)

    feature_list  ir ao estado 18
    features      ir ao estado 15
    feature       ir ao estado 16


Estado 12

   11 features: error • ';'

    ';'  deslocar, e ir ao estado 19


Estado 13

   12 feature: OBJECTID • '(' formal_list ')' ':' TYPEID '{' expr '}'
   13        | OBJECTID • '(' formal_list ')' ':' TYPEID '{' '}'
   14        | OBJECTID • '(' ')' ':' TYPEID '{' '}'
   15        | OBJECTID • '(' ')' ':' TYPEID '{' expr '}'
   16        | OBJECTID • ':' TYPEID opt_assign

    '('  deslocar, e ir ao estado 20
    ':'  deslocar, e ir ao estado 21


Estado 14

    6 class: CLASS error '{' feature_list • '}' ';'

    '}'  deslocar, e ir ao estado 22


Estado 15

    7 feature_list: features •
   10 features: features • feature ';'

    OBJECTID  deslocar, e ir ao estado 13

    $padrão  reduzir usando a regra 7 (feature_list)

    feature  ir ao estado 23


Estado 16

    9 features: feature • ';'

    ';'  deslocar, e ir ao estado 24


Estado 17

    5 class: CLASS TYPEID INHERITS TYPEID • '{' feature_list '}' ';'

    '{'  deslocar, e ir ao estado 25


Estado 18

    4 class: CLASS TYPEID '{' feature_list • '}' ';'

    '}'  deslocar, e ir ao estado 26


Estado 19

   11 features: error ';' •

    $padrão  reduzir usando a regra 11 (features)


Estado 20

   12 feature: OBJECTID '(' • formal_list ')' ':' TYPEID '{' expr '}'
   13        | OBJECTID '(' • formal_list ')' ':' TYPEID '{' '}'
   14        | OBJECTID '(' • ')' ':' TYPEID '{' '}'
   15        | OBJECTID '(' • ')' ':' TYPEID '{' expr '}'

    OBJECTID  deslocar, e ir ao estado 27
    ')'       deslocar, e ir ao estado 28

    formal_list  ir ao estado 29
    formal       ir ao estado 30


Estado 21

   16 feature: OBJECTID ':' • TYPEID opt_assign

    TYPEID  deslocar, e ir ao estado 31


Estado 22

    6 class: CLASS error '{' feature_list '}' • ';'

    ';'  deslocar, e ir ao estado 32


Estado 23

   10 features: features feature • ';'

    ';'  deslocar, e ir ao estado 33


Estado 24

    9 features: feature ';' •

    $padrão  reduzir usando a regra 9 (features)


Estado 25

    5 class: CLASS TYPEID INHERITS TYPEID '{' • feature_list '}' ';'

    error     deslocar, e ir ao estado 12
    OBJECTID  deslocar, e ir ao estado 13

    '}'  reduzir usando a regra 8 (feature_list)

    feature_list  ir ao estado 34
    features      ir ao estado 15
    feature       ir ao estado 16


Estado 26

    4 class: CLASS TYPEID '{' feature_list '}' • ';'

    ';'  deslocar, e ir ao estado 35


Estado 27

   19 formal: OBJECTID • ':' TYPEID

    ':'  deslocar, e ir ao estado 36


Estado 28

   14 feature: OBJECTID '(' ')' • ':' TYPEID '{' '}'
   15        | OBJECTID '(' ')' • ':' TYPEID '{' expr '}'

    ':'  deslocar, e ir ao estado 37


Estado 29

   12 feature: OBJECTID '(' formal_list • ')' ':' TYPEID '{' expr '}'
   13        | OBJECTID '(' formal_list • ')' ':' TYPEID '{' '}'
   18 formal_list: formal_list • ',' formal

    ')'  deslocar, e ir ao estado 38
    ','  deslocar, e ir ao estado 39


Estado 30

   17 formal_list: formal •

    $padrão  reduzir usando a regra 17 (formal_list)


Estado 31

   16 feature: OBJECTID ':' TYPEID • opt_assign

    ASSIGN  deslocar, e ir ao estado 40

    $padrão  reduzir usando a regra 28 (opt_assign)

    opt_assign  ir ao estado 41


Estado 32

    6 class: CLASS error '{' feature_list '}' ';' •

    $padrão  reduzir usando a regra 6 (class)


Estado 33

   10 features: features feature ';' •

    $padrão  reduzir usando a regra 10 (features)


Estado 34

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list • '}' ';'

    '}'  deslocar, e ir ao estado 42


Estado 35

    4 class: CLASS TYPEID '{' feature_list '}' ';' •

    $padrão  reduzir usando a regra 4 (class)


Estado 36

   19 formal: OBJECTID ':' • TYPEID

    TYPEID  deslocar, e ir ao estado 43


Estado 37

   14 feature: OBJECTID '(' ')' ':' • TYPEID '{' '}'
   15        | OBJECTID '(' ')' ':' • TYPEID '{' expr '}'

    TYPEID  deslocar, e ir ao estado 44


Estado 38

   12 feature: OBJECTID '(' formal_list ')' • ':' TYPEID '{' expr '}'
   13        | OBJECTID '(' formal_list ')' • ':' TYPEID '{' '}'

    ':'  deslocar, e ir ao estado 45


Estado 39

   18 formal_list: formal_list ',' • formal

    OBJECTID  deslocar, e ir ao estado 27

    formal  ir ao estado 46


Estado 40

   27 opt_assign: ASSIGN • expr

    IF          deslocar, e ir ao estado 47
    LET         deslocar, e ir ao estado 48
    WHILE       deslocar, e ir ao estado 49
    CASE        deslocar, e ir ao estado 50
    NEW         deslocar, e ir ao estado 51
    ISVOID      deslocar, e ir ao estado 52
    STR_CONST   deslocar, e ir ao estado 53
    INT_CONST   deslocar, e ir ao estado 54
    BOOL_CONST  deslocar, e ir ao estado 55
    OBJECTID    deslocar, e ir ao estado 56
    NOT         deslocar, e ir ao estado 57
    '~'         deslocar, e ir ao estado 58
    '('         deslocar, e ir ao estado 59
    '{'         deslocar, e ir ao estado 60

    expr  ir ao estado 61


Estado 41

   16 feature: OBJECTID ':' TYPEID opt_assign •

    $padrão  reduzir usando a regra 16 (feature)


Estado 42

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' • ';'

    ';'  deslocar, e ir ao estado 62


Estado 43

   19 formal: OBJECTID ':' TYPEID •

    $padrão  reduzir usando a regra 19 (formal)


Estado 44

   14 feature: OBJECTID '(' ')' ':' TYPEID • '{' '}'
   15        | OBJECTID '(' ')' ':' TYPEID • '{' expr '}'

    '{'  deslocar, e ir ao estado 63


Estado 45

   12 feature: OBJECTID '(' formal_list ')' ':' • TYPEID '{' expr '}'
   13        | OBJECTID '(' formal_list ')' ':' • TYPEID '{' '}'

    TYPEID  deslocar, e ir ao estado 64


Estado 46

   18 formal_list: formal_list ',' formal •

    $padrão  reduzir usando a regra 18 (formal_list)


Estado 47

   42 expr: IF • expr THEN expr ELSE expr FI

    IF          deslocar, e ir ao estado 47
    LET         deslocar, e ir ao estado 48
    WHILE       deslocar, e ir ao estado 49
    CASE        deslocar, e ir ao estado 50
    NEW         deslocar, e ir ao estado 51
    ISVOID      deslocar, e ir ao estado 52
    STR_CONST   deslocar, e ir ao estado 53
    INT_CONST   deslocar, e ir ao estado 54
    BOOL_CONST  deslocar, e ir ao estado 55
    OBJECTID    deslocar, e ir ao estado 56
    NOT         deslocar, e ir ao estado 57
    '~'         deslocar, e ir ao estado 58
    '('         deslocar, e ir ao estado 59
    '{'         deslocar, e ir ao estado 60

    expr  ir ao estado 65


Estado 48

   56 expr: LET • let_list

    error     deslocar, e ir ao estado 66
    OBJECTID  deslocar, e ir ao estado 67

    let_list  ir ao estado 68


Estado 49

   43 expr: WHILE • expr LOOP expr POOL

    IF          deslocar, e ir ao estado 47
    LET         deslocar, e ir ao estado 48
    WHILE       deslocar, e ir ao estado 49
    CASE        deslocar, e ir ao estado 50
    NEW         deslocar, e ir ao estado 51
    ISVOID      deslocar, e ir ao estado 52
    STR_CONST   deslocar, e ir ao estado 53
    INT_CONST   deslocar, e ir ao estado 54
    BOOL_CONST  deslocar, e ir ao estado 55
    OBJECTID    deslocar, e ir ao estado 56
    NOT         deslocar, e ir ao estado 57
    '~'         deslocar, e ir ao estado 58
    '('         deslocar, e ir ao estado 59
    '{'         deslocar, e ir ao estado 60

    expr  ir ao estado 69


Estado 50

   57 expr: CASE • expr OF cases ESAC

    IF          deslocar, e ir ao estado 47
    LET         deslocar, e ir ao estado 48
    WHILE       deslocar, e ir ao estado 49
    CASE        deslocar, e ir ao estado 50
    NEW         deslocar, e ir ao estado 51
    ISVOID      deslocar, e ir ao estado 52
    STR_CONST   deslocar, e ir ao estado 53
    INT_CONST   deslocar, e ir ao estado 54
    BOOL_CONST  deslocar, e ir ao estado 55
    OBJECTID    deslocar, e ir ao estado 56
    NOT         deslocar, e ir ao estado 57
    '~'         deslocar, e ir ao estado 58
    '('         deslocar, e ir ao estado 59
    '{'         deslocar, e ir ao estado 60

    expr  ir ao estado 70


Estado 51

   45 expr: NEW • TYPEID

    TYPEID  deslocar, e ir ao estado 71


Estado 52

   46 expr: ISVOID • expr

    IF          deslocar, e ir ao estado 47
    LET         deslocar, e ir ao estado 48
    WHILE       deslocar, e ir ao estado 49
    CASE        deslocar, e ir ao estado 50
    NEW         deslocar, e ir ao estado 51
    ISVOID      deslocar, e ir ao estado 52
    STR_CONST   deslocar, e ir ao estado 53
    INT_CONST   deslocar, e ir ao estado 54
    BOOL_CONST  deslocar, e ir ao estado 55
    OBJECTID    deslocar, e ir ao estado 56
    NOT         deslocar, e ir ao estado 57
    '~'         deslocar, e ir ao estado 58
    '('         deslocar, e ir ao estado 59
    '{'         deslocar, e ir ao estado 60

    expr  ir ao estado 72


Estado 53

   59 expr: STR_CONST •

    $padrão  reduzir usando a regra 59 (expr)


Estado 54

   60 expr: INT_CONST •

    $padrão  reduzir usando a regra 60 (expr)


Estado 55

   61 expr: BOOL_CONST •

    $padrão  reduzir usando a regra 61 (expr)


Estado 56

   38 expr: OBJECTID • ASSIGN expr
   40     | OBJECTID • '(' expr_list ')'
   62     | OBJECTID •

    ASSIGN  deslocar, e ir ao estado 73
    '('     deslocar, e ir ao estado 74

    $padrão  reduzir usando a regra 62 (expr)


Estado 57

   55 expr: NOT • expr

    IF          deslocar, e ir ao estado 47
    LET         deslocar, e ir ao estado 48
    WHILE       deslocar, e ir ao estado 49
    CASE        deslocar, e ir ao estado 50
    NEW         deslocar, e ir ao estado 51
    ISVOID      deslocar, e ir ao estado 52
    STR_CONST   deslocar, e ir ao estado 53
    INT_CONST   deslocar, e ir ao estado 54
    BOOL_CONST  deslocar, e ir ao estado 55
    OBJECTID    deslocar, e ir ao estado 56
    NOT         deslocar, e ir ao estado 57
    '~'         deslocar, e ir ao estado 58
    '('         deslocar, e ir ao estado 59
    '{'         deslocar, e ir ao estado 60

    expr  ir ao estado 75


Estado 58

   54 expr: '~' • expr

    IF          deslocar, e ir ao estado 47
    LET         deslocar, e ir ao estado 48
    WHILE       deslocar, e ir ao estado 49
    CASE        deslocar, e ir ao estado 50
    NEW         deslocar, e ir ao estado 51
    ISVOID      deslocar, e ir ao estado 52
    STR_CONST   deslocar, e ir ao estado 53
    INT_CONST   deslocar, e ir ao estado 54
    BOOL_CONST  deslocar, e ir ao estado 55
    OBJECTID    deslocar, e ir ao estado 56
    NOT         deslocar, e ir ao estado 57
    '~'         deslocar, e ir ao estado 58
    '('         deslocar, e ir ao estado 59
    '{'         deslocar, e ir ao estado 60

    expr  ir ao estado 76


Estado 59

   58 expr: '(' • expr ')'

    IF          deslocar, e ir ao estado 47
    LET         deslocar, e ir ao estado 48
    WHILE       deslocar, e ir ao estado 49
    CASE        deslocar, e ir ao estado 50
    NEW         deslocar, e ir ao estado 51
    ISVOID      deslocar, e ir ao estado 52
    STR_CONST   deslocar, e ir ao estado 53
    INT_CONST   deslocar, e ir ao estado 54
    BOOL_CONST  deslocar, e ir ao estado 55
    OBJECTID    deslocar, e ir ao estado 56
    NOT         deslocar, e ir ao estado 57
    '~'         deslocar, e ir ao estado 58
    '('         deslocar, e ir ao estado 59
    '{'         deslocar, e ir ao estado 60

    expr  ir ao estado 77


Estado 60

   44 expr: '{' • expr_block '}'

    error       deslocar, e ir ao estado 78
    IF          deslocar, e ir ao estado 47
    LET         deslocar, e ir ao estado 48
    WHILE       deslocar, e ir ao estado 49
    CASE        deslocar, e ir ao estado 50
    NEW         deslocar, e ir ao estado 51
    ISVOID      deslocar, e ir ao estado 52
    STR_CONST   deslocar, e ir ao estado 53
    INT_CONST   deslocar, e ir ao estado 54
    BOOL_CONST  deslocar, e ir ao estado 55
    OBJECTID    deslocar, e ir ao estado 56
    NOT         deslocar, e ir ao estado 57
    '~'         deslocar, e ir ao estado 58
    '('         deslocar, e ir ao estado 59
    '{'         deslocar, e ir ao estado 60

    expr_block  ir ao estado 79
    expr        ir ao estado 80


Estado 61

   27 opt_assign: ASSIGN expr •
   39 expr: expr • '.' OBJECTID '(' expr_list ')'
   41     | expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'
   47     | expr • '+' expr
   48     | expr • '-' expr
   49     | expr • '/' expr
   50     | expr • '*' expr
   51     | expr • '<' expr
   52     | expr • LE expr
   53     | expr • '=' expr

    LE   deslocar, e ir ao estado 81
    '<'  deslocar, e ir ao estado 82
    '='  deslocar, e ir ao estado 83
    '+'  deslocar, e ir ao estado 84
    '-'  deslocar, e ir ao estado 85
    '*'  deslocar, e ir ao estado 86
    '/'  deslocar, e ir ao estado 87
    '@'  deslocar, e ir ao estado 88
    '.'  deslocar, e ir ao estado 89

    $padrão  reduzir usando a regra 27 (opt_assign)


Estado 62

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' •

    $padrão  reduzir usando a regra 5 (class)


Estado 63

   14 feature: OBJECTID '(' ')' ':' TYPEID '{' • '}'
   15        | OBJECTID '(' ')' ':' TYPEID '{' • expr '}'

    IF          deslocar, e ir ao estado 47
    LET         deslocar, e ir ao estado 48
    WHILE       deslocar, e ir ao estado 49
    CASE        deslocar, e ir ao estado 50
    NEW         deslocar, e ir ao estado 51
    ISVOID      deslocar, e ir ao estado 52
    STR_CONST   deslocar, e ir ao estado 53
    INT_CONST   deslocar, e ir ao estado 54
    BOOL_CONST  deslocar, e ir ao estado 55
    OBJECTID    deslocar, e ir ao estado 56
    NOT         deslocar, e ir ao estado 57
    '~'         deslocar, e ir ao estado 58
    '('         deslocar, e ir ao estado 59
    '{'         deslocar, e ir ao estado 60
    '}'         deslocar, e ir ao estado 90

    expr  ir ao estado 91


Estado 64

   12 feature: OBJECTID '(' formal_list ')' ':' TYPEID • '{' expr '}'
   13        | OBJECTID '(' formal_list ')' ':' TYPEID • '{' '}'

    '{'  deslocar, e ir ao estado 92


Estado 65

   39 expr: expr • '.' OBJECTID '(' expr_list ')'
   41     | expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'
   42     | IF expr • THEN expr ELSE expr FI
   47     | expr • '+' expr
   48     | expr • '-' expr
   49     | expr • '/' expr
   50     | expr • '*' expr
   51     | expr • '<' expr
   52     | expr • LE expr
   53     | expr • '=' expr

    THEN  deslocar, e ir ao estado 93
    LE    deslocar, e ir ao estado 81
    '<'   deslocar, e ir ao estado 82
    '='   deslocar, e ir ao estado 83
    '+'   deslocar, e ir ao estado 84
    '-'   deslocar, e ir ao estado 85
    '*'   deslocar, e ir ao estado 86
    '/'   deslocar, e ir ao estado 87
    '@'   deslocar, e ir ao estado 88
    '.'   deslocar, e ir ao estado 89


Estado 66

   36 let_list: error • IN expr
   37         | error • ',' let_list

    IN   deslocar, e ir ao estado 94
    ','  deslocar, e ir ao estado 95


Estado 67

   32 let_list: OBJECTID • ':' TYPEID IN expr
   33         | OBJECTID • ':' TYPEID ASSIGN expr IN expr
   34         | OBJECTID • ':' TYPEID ',' let_list
   35         | OBJECTID • ':' TYPEID ASSIGN expr ',' let_list

    ':'  deslocar, e ir ao estado 96


Estado 68

   56 expr: LET let_list •

    $padrão  reduzir usando a regra 56 (expr)


Estado 69

   39 expr: expr • '.' OBJECTID '(' expr_list ')'
   41     | expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'
   43     | WHILE expr • LOOP expr POOL
   47     | expr • '+' expr
   48     | expr • '-' expr
   49     | expr • '/' expr
   50     | expr • '*' expr
   51     | expr • '<' expr
   52     | expr • LE expr
   53     | expr • '=' expr
